--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,54 @@
 asgiref==3.6.0
+astroid==2.15.4
 asttokens==2.2.1
 backcall==0.2.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
 colorama==0.4.6
+cryptography==40.0.2
 decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.6
 Django==3.2.18
+django-allauth==0.54.0
 django-appconf==1.0.5
 django-extensions==3.2.1
 django-imagekit==4.1.0
 executing==1.2.0
+idna==3.4
 ipython==8.12.0
+isort==5.12.0
 jedi==0.18.2
+lazy-object-proxy==1.9.0
 matplotlib-inline==0.1.6
+mccabe==0.7.0
+oauthlib==3.2.2
 parso==0.8.3
 pickleshare==0.7.5
 pilkit==2.0
 Pillow==9.5.0
+platformdirs==3.5.0
 prompt-toolkit==3.0.38
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.15.1
+PyJWT==2.6.0
+pylint==2.17.3
+python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3
+requests==2.29.0
+requests-oauthlib==1.3.1
+pytz==2023.3
+requests==2.29.0
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
+tomli==2.0.1
+tomlkit==0.11.8
 traitlets==5.9.0
 typing_extensions==4.5.0
+urllib3==1.26.15
 wcwidth==0.2.6
+wrapt==1.15.0
