--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ dill==0.3.6
 Django==3.2.18
 django-allauth==0.54.0
 django-appconf==1.0.5
+django-classy-tags==4.0.0
 django-extensions==3.2.1
 django-imagekit==4.1.0
+django-taggit==4.0.0
+django-taggit-templatetags2==1.6.1
 executing==1.2.0
 idna==3.4
 ipython==8.12.0
